[tool.poetry]
name = "elethis-cipher"
version = "0.1.0"
description = "A tabula recta variant autokey cipher, implementation in python"
authors = ["evilchili <evilchili@gmail.com>"]
license = "The Unlicense"
packages = [
    { include = 'cipher' }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
